placeholder for filter/dates made on desktop;footer alignment fixed

--- a/TempStyle/style.css
+++ b/TempStyle/style.css
@@ -9,19 +9,35 @@
   /*padding for fixed header*/
   padding-top: 70px;
 }
+/*filter/dates styling*/
+.date_input-con {
+  width: calc(100% - 375px);
+  display: block;
+  height: 75px;
+  background-color: grey;
+  float: right;
+}
+.applied_filters-con {
+  width: 375px;
+  height: 75px;
+  float: left;
+  display: block;
+  background-color: blue;
+}
+
+/*search results camp list styling*/
 #list_wrapper {
   height: 100vh;
   width: 100%;
   position: relative;
 }
 
-/*search results camp list styling*/
 .camp_list-con {
   display: inline-block;
   width: 30vw;
   max-width: 375px;
   min-width: 275px;
-  height: 93vh;
+  height: 84vh;
   background-color: #FFEEE6;
   overflow-y: scroll;
   /*hiding scrollbar*/
@@ -130,7 +146,7 @@ li .camp_title-con {
 .search_map-con {
   /*display: inline-block;*/
   width: calc(100% - 30vw);
-  height: 93vh;
+  height: 84vh;
   float: right;
   background-color: #ECEAE4;
 }
